<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Auth.SignUpUserActivity"
    android:background="@color/colorLighterGrey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/thirtytwo">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/tv_title_sign_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="@dimen/eight"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <EditText
                android:id="@+id/edtNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fillable_form"
                android:drawablePadding="@dimen/eight"
                android:drawableStart="@drawable/ic_person_lighter_grey_24dp"
                
                android:hint="@string/name"
                android:inputType="textCapSentences"
                android:padding="@dimen/eight"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fillable_form"
                android:drawablePadding="@dimen/eight"
                android:drawableStart="@drawable/ic_mail_light_grey_24dp"
                android:layout_marginTop="@dimen/eight"
                
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/eight"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:background="@drawable/fillable_form"
                android:drawablePadding="@dimen/eight"
                android:drawableStart="@drawable/ic_vpn_key_lighter_grey_24dp"
                
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/eight"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/edtTlp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:background="@drawable/fillable_form"
                android:drawablePadding="@dimen/eight"
                android:drawableStart="@drawable/ic_phone_light_grey_24dp"
                
                android:hint="@string/phone_number"
                android:inputType="textPassword"
                android:padding="@dimen/eight"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/sixteen"
                android:background="@drawable/filled_button_accent"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:padding="@dimen/sixteen"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/tv_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/here"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "/>
            <TextView
                android:id="@+id/tv_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_sign_up"
                android:textColor="@android:color/black"
                android:textStyle="normal"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>